--- a/consultancy-firm-profile/thebombayconsultancy/src/components/Navbar/Navbar.module.css
+++ b/consultancy-firm-profile/thebombayconsultancy/src/components/Navbar/Navbar.module.css
@@ -35,13 +35,14 @@
     display: flex;
     gap: 47px;
     list-style: none;
-    justify-content: space-around;
+    justify-content: space-between;
     transition: max-height 0.3s ease-out, opacity 0.3s ease-out;
 }
 
 .menuItems li {
     padding: 14px 20px;
 }
+
 
 .menuItems a {
     font-size: 17px;
@@ -93,7 +94,6 @@
     .navbar {
         flex-direction: column;
         padding: 10px 5%;
-       
     }
 
     .menu {
@@ -130,7 +130,7 @@
     .menuItems {
         display: none;
         flex-direction: column;
-        align-items: center;
+        align-items: flex-start;
         width: 100%;
         padding: 0;
         /* background-color: var(--color-bg); */
@@ -173,6 +173,16 @@
     .menuItems li:hover {
         background-color: #f5f5f5;
     }
+}
+
+@media (max-width: 600px){
+    .navbar{
+        padding: 5px;
+    }
+    .menuItems{
+        width: 100%;
+    }
+    
 }
 
 @media screen and (min-width: 900px) {
