--- a/consultancy-firm-profile/thebombayconsultancy/src/components/Navbar/Navbar.css
+++ b/consultancy-firm-profile/thebombayconsultancy/src/components/Navbar/Navbar.css
@@ -20,6 +20,7 @@
     pointer-events: auto;
   }
   
+  
   .navbar .dropdown-item {
     padding: 12px 20px;
     color: #333; /* Dark, professional color */
@@ -40,7 +41,7 @@
 
 /* Logo */
 .navbar-brand img {
-    max-height: 60px; /* Larger logo size */
+    max-height: 70px; /* Larger logo size */
     transition: max-height 0.3s ease; /* Smooth scaling */
 }
 .navbar .dropdown-item:hover {
@@ -82,6 +83,17 @@
     align-items: center;
       
 }
+/* Navbar.css */
+.navbar-visible {
+    transform: translateY(0);
+    transition: transform 0.3s ease-in-out;
+  }
+  
+  .navbar-hidden {
+    transform: translateY(-100%);
+    transition: transform 0.3s ease-in-out;
+  }
+  
 
 @media screen and (max-width: 900px) {
     .navbar-nav {
